Changed retain current filters under search box input field for better visibility. Lowered padding between search box and search results header and margin under search terms. Prefilter drop down moved to correct position.

--- a/web/interface/themes/ndl/css/480mobile.css
+++ b/web/interface/themes/ndl/css/480mobile.css
@@ -57,7 +57,6 @@
     
     #searchFormHeader #searchFormContainer {
         padding: 10px 0;
-        margin-bottom: 3em;
     }
 
     .advancedLinkWrapper {
@@ -168,8 +167,8 @@
         clear: left;
         float: right;
         margin-right: 10px;
-        left: 242px;
-        top: 54px;
+        left: 0px;
+        top: 52px;
     }
     .keepdFilters > input {
         display: block;
