--- a/web/interface/themes/ndl/css/720tablet.css
+++ b/web/interface/themes/ndl/css/720tablet.css
@@ -431,11 +431,6 @@
       min-width: 720px;
     }
 
-
-    
-    .keepFilters {
-        left: 242px;
-    }
     .ui-autocomplete {
         width: 457px !important;
     }
